--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,26 @@
 altair==5.3.0
-annotated-types==0.7.0
 anyio==4.4.0
+annotated-types==0.7.0
 attrs==23.2.0
-blinker==1.4
+blink1==1.4
 cachetools==5.3.3
 certifi==2024.7.4
 charset-normalizer==3.3.2
 click==8.1.7
-command-not-found==0.3
-cryptography==3.4.8
-dbus-python==1.2.18
 decorator==4.4.2
 distro==1.7.0
-distro-info==1.1+ubuntu0.2
 exceptiongroup==1.2.1
 gitdb==4.0.11
-GitPython==3.1.43
+gitpython==3.1.43
 groq==0.9.0
-h11==0.14.0
 httpcore==1.0.5
-httplib2==0.20.2
 httpx==0.27.0
 idna==3.7
 imageio==2.34.2
 imageio-ffmpeg==0.5.1
-importlib-metadata==4.6.4
-jeepney==0.7.1
-Jinja2==3.1.4
-jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-keyring==23.5.0
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
 markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-mdurl==0.1.2
-more-itertools==8.10.0
 moviepy==1.0.3
-netifaces==0.11.0
 numpy==2.0.0
-oauthlib==3.2.0
 packaging==24.1
 pandas==2.2.2
 pillow==10.4.0
@@ -48,37 +28,19 @@ proglog==0.1.10
 protobuf==5.27.2
 pyarrow==16.1.0
 pydantic==2.8.2
-pydantic_core==2.20.1
+pydantic-core==2.20.1
 pydeck==0.9.1
-Pygments==2.18.0
-PyGObject==3.42.1
-PyJWT==2.3.0
-pyparsing==2.4.7
-python-apt==2.4.0+ubuntu3
+pygments==2.18.0
 python-dateutil==2.9.0.post0
-pytz==2024.1
-PyYAML==5.4.1
-referencing==0.35.1
 requests==2.32.3
 rich==13.7.1
-rpds-py==0.19.0
-SecretStorage==3.3.1
-six==1.16.0
 smmap==5.0.1
-sniffio==1.3.1
 streamlit==1.36.0
-systemd-python==234
 tenacity==8.5.0
-toml==0.10.2
-toolz==0.12.1
 tornado==6.4.1
+toolz==0.12.1
+toml==0.10.2
 tqdm==4.66.4
-typing_extensions==4.12.2
-tzdata==2024.1
-ubuntu-pro-client==8001
-ufw==0.36.1
-unattended-upgrades==0.1
+typing-extensions==4.12.2
 urllib3==2.2.2
-wadllib==1.3.6
 watchdog==4.0.1
-zipp==1.0.0
